# ff_premier_draft_helper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: FPL_endpoints.md  kloppy_spike.md  name_link_curated.csv  scraper_comparison.md  seasons.yaml  sleeper_draft.json  sleeper_setup.json  snake_draft_hardening.md  stat_map.yaml  to_do.md
scripts/: build_historical.py  compare_scrapers.py  live_draft_helper.py  make_recommendations.py  recommend_formation.py  refresh_league_config.py  streamlit_app.py  suggest_name_links.py  update_current.py  update_sleeper_files.py  weekly_lineup.py
src/pdh/: __init__.py  draft_board.py  fbref.py  fbref_browser.py  fpl.py  namelink.py  normalize.py  projections.py  recommend.py  scoring.py  seasons.py  sleeper.py  stickiness.py  understat.py
src/pdh/webapp/: data.py
