[project]
name = "ff-premier-draft-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "seleniumbase>=4.35.0",
    "soccerdata>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdh"]
